# EAGer

./: .gitignore  README.md  example_execution.sh  pyproject.toml  script_eval_code_gen.py  script_manual_parallel_recapper.py
analysis/: entropy_perf.py
eager/: entropy_generator_vllm.py  entropy_handler.py  evaluate.py  main_vllm.py
src/: entropy_generator_vllm.py  main_vllm.py
