[project]
name = "entropy-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.8.1",
    "datasets>=3.6.0",
    "evalplus>=0.3.1",
    "fire>=0.7.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "rich>=14.0.0",
    "scikit-learn>=1.7.2",
    "torch>=2.7.0",
    "transformers>=4.52.4",
    "vllm>=0.9.1",
]
